# docs/swagger.json
@@ -194,6 +194,11 @@
         },
         "/api/v1/user": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -232,6 +237,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -274,6 +284,11 @@
         },
         "/api/v1/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -312,6 +327,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -381,6 +401,9 @@
                 "access_token": {
                     "type": "string"
                 },
+                "token_type": {
+                    "type": "string"
+                },
                 "user": {
                     "$ref": "#/definitions/ent.User"
                 }
@@ -409,6 +432,10 @@
         "ent.User": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "description": "CreatedAt holds the value of the \"created_at\" field.",
+                    "type": "string"
+                },
                 "email": {
                     "description": "Email holds the value of the \"email\" field.",
                     "type": "string"
@@ -419,7 +446,7 @@
                 },
                 "id": {
                     "description": "ID of the ent.",
-                    "type": "integer"
+                    "type": "string"
                 },
                 "lastName": {
                     "description": "LastName holds the value of the \"lastName\" field.",
@@ -436,6 +463,10 @@
                 "status": {
                     "description": "Status holds the value of the \"status\" field.",
                     "type": "boolean"
+                },
+                "updated_at": {
+                    "description": "UpdatedAt holds the value of the \"updated_at\" field.",
+                    "type": "string"
                 }
             }
         }
